--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "dumoli-ui",
   "license": "MIT",
-  "version": "0.0.5",
-  "main": "dist/cjs/index.js",
+  "version": "0.0.6",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "module": "dist/es/index.js",
   "private": false,
   "files": [
