--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dumoli-ui",
   "license": "MIT",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "module": "dist/es/index.js",
@@ -14,7 +14,8 @@
     "react-dom": "^19.0.0"
   },
   "scripts": {
-    "build": "tsc -p ."
+    "build": "tsc -p . && cpy 'src/**/*.css' dist --parents",
+    "copy:css": "cpy 'src/**/*.css' dist --parents"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.26.3",
@@ -24,8 +25,13 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "cpy-cli": "^5.0.0",
+    "css-loader": "^7.1.2",
     "rollup": "^4.32.1",
+    "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "style-loader": "^4.0.0",
     "typescript": "^5.7.3"
   },
   "exports": {
