--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dumoli-ui",
   "license": "MIT",
-  "version": "0.0.14",
+  "version": "0.0.16",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "module": "dist/es/index.js",
@@ -25,13 +25,16 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "autoprefixer": "^10.4.20",
     "cpy-cli": "^5.0.0",
     "css-loader": "^7.1.2",
+    "postcss": "^8.5.1",
     "rollup": "^4.32.1",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "style-loader": "^4.0.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3"
   },
   "exports": {
