--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dumoli-ui",
   "license": "MIT",
-  "version": "0.0.18",
+  "version": "0.0.19",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "module": "dist/es/index.js",
@@ -34,7 +34,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "style-loader": "^4.0.0",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.2",
     "typescript": "^5.7.3"
   },
   "exports": {
@@ -50,5 +50,8 @@
       "import": "./dist/Page/Page.js",
       "require": "./dist/Page/Page.js"
     }
+  },
+  "dependencies": {
+    "@tailwindcss/cli": "^4.0.2"
   }
 }
