--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dumoli-ui",
   "license": "MIT",
-  "version": "0.0.19",
+  "version": "0.0.20",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "module": "dist/es/index.js",
@@ -28,13 +28,14 @@
     "autoprefixer": "^10.4.20",
     "cpy-cli": "^5.0.0",
     "css-loader": "^7.1.2",
+    "install": "^0.13.0",
     "postcss": "^8.5.1",
     "rollup": "^4.32.1",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "style-loader": "^4.0.0",
-    "tailwindcss": "^4.0.2",
+    "tailwindcss": "3",
     "typescript": "^5.7.3"
   },
   "exports": {
