--- a/package.json
+++ b/package.json
@@ -1,29 +1,34 @@
 {
   "name": "mis-design",
   "license": "MIT",
-  "version": "0.0.1",
+  "version": "0.0.24",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "module": "dist/es/index.js",
-  "private": true,
+  "private": false,
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "rimraf dist && tsc -p . && yarn copy:css",
-    "build:css": "npx tailwindcss -i ./src/input.css -o ./src/output.css --minify",
     "copy:css": "cpy \"src/**/*.css\" dist --parents",
+    "copy:assets": "cpy \"src/assets/**/*\" dist/assets -r",
+    "build": "rimraf dist && tsc -p . && yarn copy:css && yarn copy:assets",
+    "build:css": "npx tailwindcss -i ./src/input.css -o ./src/output.css --minify",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "export": "node scripts/export.js"
   },
   "dependencies": {
+    "child_process": "^1.0.2",
     "classnames": "^2.5.1",
     "cpy-cli": "^5.0.0",
     "dayjs": "^1.11.13",
-    "react-feather": "^2.0.10",
+    "fs": "^0.0.1-security",
     "react-pdf": "^9.2.1",
     "react-router-dom": "^7.1.5",
+    "readline": "^1.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "tslib": "^2.8.1",
     "use-debounce": "^10.0.4"
   },
   "peerDependencies": {
@@ -32,23 +37,19 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.26.3",
-    "@rollup/plugin-babel": "^6.0.4",
-    "@rollup/plugin-commonjs": "^28.0.2",
-    "@rollup/plugin-node-resolve": "^16.0.0",
-    "@rollup/plugin-terser": "^0.4.4",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/node": "^22.13.5",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "copy-webpack-plugin": "^12.0.2",
     "cpy-cli": "^5.0.0",
     "css-loader": "^7.1.2",
+    "file-loader": "^6.2.0",
+    "inquirer": "^12.4.2",
+    "postcss-loader": "^8.1.1",
     "prettier": "^3.4.2",
     "rimraf": "^6.0.1",
-    "rollup": "^4.32.1",
-    "rollup-plugin-auto-entry": "^2.0.2",
-    "rollup-plugin-copy": "^3.5.0",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-postcss": "^4.0.2",
+    "shelljs": "^0.8.5",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.17",
     "tsconfig-paths-webpack-plugin": "^4.2.0",
